[package]
name = "ohbuild"
version = "0.1.0"
authors = ["pitust <piotr@stelmaszek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
serde = "1.0.117"
toml = "0.5.7"

[[bin]]
name = "mbcc"
path = "src/mbcc.rs"